--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Gradle files
 .gradle/
 build/
+**/build/
+!gradle/wrapper/gradle-wrapper.jar
 
 # Local configuration file (sdk path, etc)
 local.properties
