--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,6 +1,7 @@
 [versions]
 agp = "8.9.2"
 kotlin = "2.0.21"
+ksp = "2.0.21-1.0.27"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -8,6 +9,22 @@ espressoCore = "3.7.0"
 lifecycleRuntimeKtx = "2.9.3"
 activityCompose = "1.10.1"
 composeBom = "2024.09.00"
+retrofit = "2.9.0"
+converter-gson = "2.9.0"
+kotlinx-coroutines-android = "1.5.2"
+kotlinx-coroutines-core = "1.5.2"
+runtimeLivedata = "1.8.1"
+lifecycle-viewmodel-compose = "2.6.1"
+workRuntimeKtx = "2.10.1"
+appcompat = "1.7.0"
+gson = "2.10.1"
+protoliteWellKnownTypes = "18.0.1"
+runtimeLivedataVersion = "1.8.2"
+room-runtime = "2.6.1"
+room-ktx = "2.6.1"
+room-compiler = "2.6.1"
+androidxRuntimeLivedata = "1.8.3"
+navigation-compose = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -24,9 +41,27 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
+converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converter-gson" }
+kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android" }
+kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
+androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
+lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
+androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
+androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+code-gson = {group = "com.google.code.gson", name = "gson", version.ref = "gson"}
+protolite-well-known-types = { group = "com.google.firebase", name = "protolite-well-known-types", version.ref = "protoliteWellKnownTypes" }
+runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedataVersion" }
+room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room-runtime"}
+room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room-ktx"}
+room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room-compiler"}
+material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended"}
+androidx-compose-runtime-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "androidxRuntimeLivedata" }
+navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
 
