--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.9.2"
 kotlin = "2.0.21"
 ksp = "2.0.21-1.0.27"
+hilt = "2.57.1"
 coreKtx = "1.17.0"
 junit = "4.13.2"
 junitVersion = "1.3.0"
@@ -58,10 +59,13 @@ room-compiler = { group = "androidx.room", name = "room-compiler", version.ref =
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended"}
 androidx-compose-runtime-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "androidxRuntimeLivedata" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
+hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
+hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
 devtools-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+dagger-hilt = { id = "com.google.dagger.hilt.android",  version.ref =  "hilt" }
 
