--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -14,18 +14,15 @@ retrofit = "2.9.0"
 converter-gson = "2.9.0"
 kotlinx-coroutines-android = "1.5.2"
 kotlinx-coroutines-core = "1.5.2"
-runtimeLivedata = "1.8.1"
 lifecycle-viewmodel-compose = "2.6.1"
-workRuntimeKtx = "2.10.1"
-appcompat = "1.7.0"
-gson = "2.10.1"
-protoliteWellKnownTypes = "18.0.1"
-runtimeLivedataVersion = "1.8.2"
-room-runtime = "2.6.1"
-room-ktx = "2.6.1"
-room-compiler = "2.6.1"
-androidxRuntimeLivedata = "1.8.3"
-navigation-compose = "2.7.7"
+gson = "2.11.0"
+room-runtime = "2.8.4"
+room-ktx = "2.8.4"
+room-compiler = "2.8.4"
+navigation-compose = "2.9.6"
+roomCompilerProcessingTesting = "2.8.4"
+logging-interceptor = "4.11.0"
+security-crypto = "1.1.0"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -46,21 +43,18 @@ retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = 
 converter = { group = "com.squareup.retrofit2", name = "converter-gson", version.ref = "converter-gson" }
 kotlinx-coroutines-android = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-android", version.ref = "kotlinx-coroutines-android" }
 kotlinx-coroutines-core = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutines-core", version.ref = "kotlinx-coroutines-core" }
-androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 lifecycle-viewmodel-compose = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-compose", version.ref = "lifecycle-viewmodel-compose" }
-androidx-work-runtime-ktx = { group = "androidx.work", name = "work-runtime-ktx", version.ref = "workRuntimeKtx" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 code-gson = {group = "com.google.code.gson", name = "gson", version.ref = "gson"}
-protolite-well-known-types = { group = "com.google.firebase", name = "protolite-well-known-types", version.ref = "protoliteWellKnownTypes" }
-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedataVersion" }
 room-runtime = { group = "androidx.room", name = "room-runtime", version.ref = "room-runtime"}
 room-ktx = { group = "androidx.room", name = "room-ktx", version.ref = "room-ktx"}
 room-compiler = { group = "androidx.room", name = "room-compiler", version.ref = "room-compiler"}
 material-icons-extended = { group = "androidx.compose.material", name = "material-icons-extended"}
-androidx-compose-runtime-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "androidxRuntimeLivedata" }
 navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigation-compose" }
 hilt-android = { group = "com.google.dagger", name = "hilt-android", version.ref = "hilt"}
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hilt"}
+androidx-room-compiler-processing-testing = { group = "androidx.room", name = "room-compiler-processing-testing", version.ref = "roomCompilerProcessingTesting" }
+logging-interceptor = { group = "com.squareup.okhttp3", name = "logging-interceptor", version.ref = "logging-interceptor"}
+security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "security-crypto"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
